[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arkforge-mcp"
version = "1.2.0"
description = "Third-party cryptographic proof for AI agent API calls — ArkForge Trust Layer MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.14.1",
    "httpx>=0.27.0",
]
keywords = [
    "MCP",
    "AI agents",
    "cryptographic proof",
    "audit trail",
    "trust",
    "certification",
    "eIDAS",
    "NIS2",
    "EU AI Act",
    "third-party attestation",
    "sigstore",
    "RFC 3161",
]

[project.urls]
Homepage = "https://arkforge.tech"
Repository = "https://github.com/ark-forge/arkforge-mcp"
Documentation = "https://arkforge.tech/trust"

[project.scripts]
arkforge-mcp = "arkforge_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arkforge_mcp"]
